@@ -36,6 +36,7 @@ import reactor.fn.Consumer;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import javax.annotation.PreDestroy;
+import java.security.GeneralSecurityException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -103,9 +104,9 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
         Collections.sort(sortedDicomObjectIdentifierBeanIds);
         if (StringUtils.isNotBlank(primaryBeanId)) {
             _primaryDicomObjectIdentifierBeanId = primaryBeanId;
-            sortedDicomObjectIdentifierBeanIds.add(0, _primaryDicomObjectIdentifierBeanId);
+            sortedDicomObjectIdentifierBeanIds.addFirst(_primaryDicomObjectIdentifierBeanId);
         } else {
-            _primaryDicomObjectIdentifierBeanId = sortedDicomObjectIdentifierBeanIds.get(0);
+            _primaryDicomObjectIdentifierBeanId = sortedDicomObjectIdentifierBeanIds.getFirst();
         }
 
         _dicomObjectIdentifierBeanIds = sortedDicomObjectIdentifierBeanIds.stream().filter(StringUtils::isNotBlank).collect(Collectors.toSet());
@@ -124,6 +125,8 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
             log.error("A DICOM network error occurred while trying to shut down", e);
         } catch (UnknownDicomHelperInstanceException e) {
             log.error("An unknown DICOM helper error occurred while trying to shut down", e);
+        } catch (GeneralSecurityException e) {
+            log.error("An unknown General Security error occurred while trying to shut down", e);
         }
     }
 
@@ -137,7 +140,7 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
             } else {
                 stop();
             }
-        } catch (UnknownDicomHelperInstanceException | DicomNetworkException e) {
+        } catch (UnknownDicomHelperInstanceException | DicomNetworkException | GeneralSecurityException e) {
             log.error("Error globally {} all Dicom SCP Receivers.", enabled ? "starting" : "stopping", e);
         }
     }
@@ -187,7 +190,7 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
      * @throws NotFoundException When an instance with the same ID does not already exist.
      */
     @SuppressWarnings("unused")
-    public DicomSCPInstance updateDicomSCPInstance(final DicomSCPInstance instance) throws NotFoundException, DicomNetworkException, UnknownDicomHelperInstanceException {
+    public DicomSCPInstance updateDicomSCPInstance(final DicomSCPInstance instance) throws NotFoundException, DicomNetworkException, UnknownDicomHelperInstanceException, GeneralSecurityException {
         if (hasDicomSCPInstance(instance.getId())) {
             _dicomSCPInstanceService.update(instance);
             cycleDicomSCPPort(instance.getPort());
@@ -208,7 +211,7 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
      *
      */
     @SuppressWarnings("unused")
-    public DicomSCPInstance update(final DicomSCPInstance instance, final boolean lookup) throws NotFoundException, DicomNetworkException, UnknownDicomHelperInstanceException {
+    public DicomSCPInstance update(final DicomSCPInstance instance, final boolean lookup) throws NotFoundException, DicomNetworkException, UnknownDicomHelperInstanceException, GeneralSecurityException {
         if (instance == null) {
             throw new NotFoundException("Instance is null");
         }
@@ -234,7 +237,7 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
      *                                                         already an enabled instance with the same AE title
      *                                                         and port.
      */
-    public DicomSCPInstance saveDicomSCPInstance(final DicomSCPInstance instance) throws DICOMReceiverWithDuplicatePropertiesException, DicomNetworkException, UnknownDicomHelperInstanceException, DicomScpInvalidWhitelistedItemException, DicomScpInvalidAeTitleException, DicomScpInvalidRoutingExpressionException, DicomScpUnsupportedRoutingExpressionException, DicomScpUnknownDOIException {
+    public DicomSCPInstance saveDicomSCPInstance(final DicomSCPInstance instance) throws DICOMReceiverWithDuplicatePropertiesException, DicomNetworkException, UnknownDicomHelperInstanceException, DicomScpInvalidWhitelistedItemException, DicomScpInvalidAeTitleException, DicomScpInvalidRoutingExpressionException, DicomScpUnsupportedRoutingExpressionException, DicomScpUnknownDOIException, GeneralSecurityException {
         final long instanceId = instance.getId();
         log.debug("Saving DicomScpInstance {}: {}", instanceId, instance);
 
@@ -276,7 +279,7 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
         for (String item : whitelist) {
             final List<String> whitelistedItem = Arrays.asList(item.split("@"));
             if (whitelistedItem.size() == 2) {
-                final String whitelistedAe = whitelistedItem.get(0);
+                final String whitelistedAe = whitelistedItem.getFirst();
                 final String whitelistedIp = whitelistedItem.get(1);
                 try {
                     new IpAddressMatcher(whitelistedIp);
@@ -334,7 +337,7 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
         return instance.isRoutingExpressionsEnabled() && !_dicomObjectIdentifierMap.get(instance.getIdentifier()).isCustomRoutingSupported();
     }
 
-    public void deleteDicomSCPInstances(final Set<Integer> ids) throws DicomNetworkException, UnknownDicomHelperInstanceException, NotFoundException {
+    public void deleteDicomSCPInstances(final Set<Integer> ids) throws DicomNetworkException, UnknownDicomHelperInstanceException, NotFoundException, GeneralSecurityException {
         log.debug("Got request to delete {} DicomSCPInstances: {}", ids.size(), StringUtils.join(ids, ", "));
         final Map<String, DicomSCPInstance> instances  = getDicomSCPInstances();
         final Set<String>                   stringIds  = ids.stream().map(id -> Integer.toString(id)).collect(Collectors.toSet());
@@ -354,7 +357,7 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
         cycleDicomSCPPorts(ports);
     }
 
-    public void deleteDicomSCPInstance(final int id) throws DicomNetworkException, UnknownDicomHelperInstanceException, NotFoundException {
+    public void deleteDicomSCPInstance(final int id) throws DicomNetworkException, UnknownDicomHelperInstanceException, NotFoundException, GeneralSecurityException {
         try {
             deleteDicomSCPInstances(Collections.singleton(id));
         } catch (NotFoundException e) {
@@ -406,7 +409,7 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
     @Nonnull
     public DicomSCPInstance getDicomSCPInstance(final String aeTitle, final int port) throws NotFoundException {
         return _dicomSCPInstanceService.findByAETitleAndPort(aeTitle, port)
-                                       .orElseThrow(() -> new NotFoundException(String.format("No such instance with aeTitle '%s' and port %d", aeTitle, port)));
+                                       .orElseThrow(() -> new NotFoundException("No such instance with aeTitle '%s' and port %d".formatted(aeTitle, port)));
     }
 
     public List<DicomSCPInstance> getEnabledDicomSCPInstancesByPort(final int port) {
@@ -427,11 +430,11 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
      * This starts all configured DICOM SCP instances, as long as the {@link SiteConfigPreferences#isEnableDicomReceiver()}
      * preference setting is set to true.
      */
-    public List<Triple<String, Integer, Boolean>> start() throws UnknownDicomHelperInstanceException, DicomNetworkException {
+    public List<Triple<String, Integer, Boolean>> start() throws UnknownDicomHelperInstanceException, DicomNetworkException, GeneralSecurityException {
         return _isEnableDicomReceiver.get() ? cycleDicomSCPPorts(_dicomSCPInstanceService.getPortsWithEnabledInstances()) : Collections.emptyList();
     }
 
-    public List<Triple<String, Integer, Boolean>> stop() throws DicomNetworkException, UnknownDicomHelperInstanceException {
+    public List<Triple<String, Integer, Boolean>> stop() throws DicomNetworkException, UnknownDicomHelperInstanceException, GeneralSecurityException {
         return _dicomSCPStore.stopAll();
     }
 
@@ -514,34 +517,34 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
     @Nullable
     public DicomObjectIdentifier<XnatProjectdata> getDicomObjectIdentifier(final String aeTitle, int port) {
         DicomSCPInstance instance = _dicomSCPInstanceService.findByAETitleAndPort(aeTitle, port)
-                                                            .orElseThrow(() -> new IllegalArgumentException(String.format("Unknown DicomSCPInstances with aeTitle '%s' and port %d", aeTitle, port)));
+                                                            .orElseThrow(() -> new IllegalArgumentException("Unknown DicomSCPInstances with aeTitle '%s' and port %d".formatted(aeTitle, port)));
         DicomObjectIdentifier<XnatProjectdata> doi = _dicomObjectIdentifierMap.get(instance.getIdentifier());
-        return doi instanceof ReceiverAwareIdentifier ?
-               ((ReceiverAwareIdentifier<? extends DicomObjectIdentifier<XnatProjectdata>>) doi).forInstance(instance) :
-               doi;
+        return doi instanceof ReceiverAwareIdentifier<?> rai ?
+                rai.forInstance(instance) :
+                doi;
     }
 
     // for API
     public void resetDicomObjectIdentifier() {
         final DicomObjectIdentifier<XnatProjectdata> objectIdentifier = getDefaultDicomObjectIdentifier();
-        if (objectIdentifier instanceof CompositeDicomObjectIdentifier) {
-            ((CompositeDicomObjectIdentifier) objectIdentifier).getProjectIdentifier().reset();
+        if (objectIdentifier instanceof CompositeDicomObjectIdentifier identifier) {
+            identifier.getProjectIdentifier().reset();
         }
     }
 
     // for API
     public void resetDicomObjectIdentifier(final String beanId) {
         final DicomObjectIdentifier<XnatProjectdata> identifier = getDicomObjectIdentifier(beanId);
-        if (identifier instanceof CompositeDicomObjectIdentifier) {
-            ((CompositeDicomObjectIdentifier) identifier).getProjectIdentifier().reset();
+        if (identifier instanceof CompositeDicomObjectIdentifier objectIdentifier) {
+            objectIdentifier.getProjectIdentifier().reset();
         }
     }
 
     // for API
     public void resetDicomObjectIdentifierBeans() {
         for (final DicomObjectIdentifier<XnatProjectdata> identifier : getDicomObjectIdentifiers().values()) {
-            if (identifier instanceof CompositeDicomObjectIdentifier) {
-                ((CompositeDicomObjectIdentifier) identifier).getProjectIdentifier().reset();
+            if (identifier instanceof CompositeDicomObjectIdentifier objectIdentifier) {
+                objectIdentifier.getProjectIdentifier().reset();
             }
         }
     }
@@ -580,6 +583,8 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
                 log.error("A DICOM network error occurred while trying to cycle DICOM SCP port {}", instance.getPort(), e);
             } catch (UnknownDicomHelperInstanceException e) {
                 log.error("An unknown DICOM helper error occurred while trying to cycle port {}", instance.getPort(), e);
+            } catch (GeneralSecurityException e) {
+                log.error("An unknown General Security error occurred while trying to shut down", e);
             }
         }
     }
@@ -598,6 +603,8 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
                     log.error("A DICOM network error occurred while trying to cycle DICOM SCP ports {} and {}", port, instance.getPort(), e);
                 } catch (UnknownDicomHelperInstanceException e) {
                     log.error("An unknown DICOM helper error occurred while trying to cycle ports {} and {}", port, instance.getPort(), e);
+                } catch (GeneralSecurityException e) {
+                    log.error("An unknown General Security error occurred while trying to shut down", e);
                 }
             } else {
                 try {
@@ -606,6 +613,8 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
                     log.error("A DICOM network error occurred while trying to cycle DICOM SCP port {}", port, e);
                 } catch (UnknownDicomHelperInstanceException e) {
                     log.error("An unknown DICOM helper error occurred while trying to cycle port {}", port, e);
+                } catch (GeneralSecurityException e) {
+                    log.error("An unknown General Security error occurred while trying to shut down", e);
                 }
             }
         }
@@ -619,6 +628,8 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
             log.error("A DICOM network error occurred while trying to cycle DICOM SCP port {}", port, e);
         } catch (UnknownDicomHelperInstanceException e) {
             log.error("An unknown DICOM helper error occurred while trying to cycle port {}", port, e);
+        } catch (GeneralSecurityException e) {
+            log.error("An unknown General Security error occurred while trying to shut down", e);
         }
     }
 
@@ -637,22 +648,22 @@ public class DicomSCPManager extends AbstractXnatPreferenceHandlerMethod impleme
                 _dicomSCPStore.stop(instance.getPort());
             }
             return saveDicomSCPInstance(instance);
-        } catch (NrgServiceException e) {
+        } catch (NrgServiceException | GeneralSecurityException e) {
             // Shouldn't happen: we just retrieved it and enabled doesn't count towards duplicate properties.
             return instance;
         }
     }
 
-    private Triple<String, Integer, Boolean> cycleDicomSCPPort(final int updated) throws DicomNetworkException, UnknownDicomHelperInstanceException {
+    private Triple<String, Integer, Boolean> cycleDicomSCPPort(final int updated) throws DicomNetworkException, UnknownDicomHelperInstanceException, GeneralSecurityException {
         final List<Triple<String, Integer, Boolean>> triples = cycleDicomSCPPorts(Collections.singleton(updated));
         if (triples.isEmpty()) {
             log.warn("No cycle dicom SCP ports found for port {}", updated);
             return ImmutableTriple.nullTriple();
         }
-        return triples.get(0);
+        return triples.getFirst();
     }
 
-    private List<Triple<String, Integer, Boolean>> cycleDicomSCPPorts(final Set<Integer> updated) throws DicomNetworkException, UnknownDicomHelperInstanceException {
+    private List<Triple<String, Integer, Boolean>> cycleDicomSCPPorts(final Set<Integer> updated) throws DicomNetworkException, UnknownDicomHelperInstanceException, GeneralSecurityException {
         log.debug("I'm going to cycle {} ports that have been added or updated: {}", updated.size(), updated);
         return _dicomSCPStore.cycle(updated);
     }
