@@ -18,7 +18,6 @@ import org.nrg.dicom.mizer.objects.AnonymizationResult;
 import org.nrg.dicom.mizer.objects.AnonymizationResultError;
 import org.nrg.dicom.mizer.objects.AnonymizationResultReject;
 import org.nrg.dicom.mizer.objects.DicomObjectFactory;
-import org.nrg.dicom.mizer.objects.DicomObjectI;
 import org.nrg.dicom.mizer.service.MizerService;
 import org.nrg.dicom.mizer.service.impl.MizerContextWithScript;
 import org.nrg.framework.exceptions.NrgServiceError;
@@ -38,7 +37,6 @@ import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.sql.SQLException;
 import java.util.List;
 
@@ -148,11 +146,10 @@ public class FileSystemSessionDataModifier implements SessionDataModifierI {
                         catch( MizerException e) {
                             throw new RuntimeException(e);
                         }
-                        final DICOMSessionBuilder db = new DICOMSessionBuilder(fileSetDir, params,
+                        try (final DICOMSessionBuilder db = new DICOMSessionBuilder(fileSetDir, params,
                                 o -> {
-                                    DicomObjectI di = DicomObjectFactory.newInstance(o);
                                     try {
-                                        AnonymizationResult anonResult = mizerService.anonymize( di, context);
+                                        AnonymizationResult anonResult = mizerService.anonymize(new DicomObjectFactory.MizerDicomObject(o), context);
                                         if (anonResult instanceof AnonymizationResultError) {
                                             throw new RuntimeException(String.join(" ","Error on DICOM object when anonymizing", fileSetDir.getAbsolutePath(),":",anonResult.getMessage()));
                                         }
@@ -165,10 +162,12 @@ public class FileSystemSessionDataModifier implements SessionDataModifierI {
                                     catch ( MizerException e) {
                                         throw new RuntimeException(e);
                                     }
-                                    return di.getDcm4che2Object();
-                                });
-                        doc = db.call();
-                        mizerService.removeContext( context);
+                                    return o;
+                                })) {
+                            doc = db.call();
+                        } finally {
+                            mizerService.removeContext(context);
+                        }
                     } else {
                         doc = PrearcTableBuilder.parseSession(xml);
                         doc.setProject(newProject);
@@ -230,7 +229,7 @@ public class FileSystemSessionDataModifier implements SessionDataModifierI {
             this.newProject = newProject;
             this.fileSetDir = new File(this.uri);
             this.timestampDir = fileSetDir.getParentFile();
-            Path newTimestampDirPath = Paths.get( this.basePath, this.newProject, this.timestampDir.getName());
+            Path newTimestampDirPath = Path.of( this.basePath, this.newProject, this.timestampDir.getName());
             this.newTimestampDir = newTimestampDirPath.normalize().toFile();
             this.xml = new File(timestampDir, session + ".xml");
             copy = new Copy(timestampDir, newTimestampDir, session);
@@ -334,14 +333,14 @@ public class FileSystemSessionDataModifier implements SessionDataModifierI {
 
             public Void run() throws SyncFailedException {
                 try {
-                    final File scanDestination = Paths.get(_destination.toURI()).resolve("SCANS").toFile();
+                    final File scanDestination = Path.of(_destination.toURI()).resolve("SCANS").toFile();
                     if (!scanDestination.exists()) {
                         if (scanDestination.mkdirs() && logger.isDebugEnabled()) {
                             logger.debug("Created new destination scan folder " + scanDestination.getAbsolutePath());
                         }
                     }
                     for (final String scan : _scans) {
-                        final File scanSource = Paths.get(_source.toURI()).resolve("SCANS").resolve(scan).toFile();
+                        final File scanSource = Path.of(_source.toURI()).resolve("SCANS").resolve(scan).toFile();
                         if (!scanSource.exists()) {
                             throw new SyncFailedException("Couldn't find the source path for scan " + scan + " under the " + _source.getAbsolutePath() + " session folder.");
                         }
